WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46383
Fix ResourceHandleWin::cancel() for network resources
https://bugs.webkit.org/show_bug.cgi?id=46383
Summary
Fix ResourceHandleWin::cancel() for network resources
Patrick R. Gansterer
Reported
2010-09-23 12:01:11 PDT
see patch
Attachments
Patch
(2.13 KB, patch)
2010-09-23 12:04 PDT
,
Patrick R. Gansterer
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick R. Gansterer
Comment 1
2010-09-23 12:04:43 PDT
Created
attachment 68558
[details]
Patch
Adam Roben (:aroben)
Comment 2
2010-09-23 12:22:14 PDT
Comment on
attachment 68558
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=68558&action=review
> WebCore/platform/network/win/ResourceHandleWin.cpp:561 > + if (d->m_requestHandle) { > + d->m_internetHandle = 0; > + InternetCloseHandle(d->m_requestHandle); > + InternetCloseHandle(d->m_connectHandle); > + } else
Do we need to clear out d->m_requestHandle, too?
Patrick R. Gansterer
Comment 3
2010-09-23 12:25:31 PDT
(In reply to
comment #2
)
> Do we need to clear out d->m_requestHandle, too?
No, d->m_requestHandle indicates if it is a network request and won't be used after cancel().
Adam Roben (:aroben)
Comment 4
2010-09-23 12:49:43 PDT
(In reply to
comment #3
)
> (In reply to
comment #2
) > > Do we need to clear out d->m_requestHandle, too? > No, d->m_requestHandle indicates if it is a network request and won't be used after cancel().
That seems like a tricky rule to follow. Maybe we should have a separate member that indicates whether it's a network request or not?
Patrick R. Gansterer
Comment 5
2010-09-23 12:52:41 PDT
(In reply to
comment #4
)
> (In reply to
comment #3
) > > (In reply to
comment #2
) > > > Do we need to clear out d->m_requestHandle, too? > > No, d->m_requestHandle indicates if it is a network request and won't be used after cancel(). > > That seems like a tricky rule to follow. Maybe we should have a separate member that indicates whether it's a network request or not?
Might be a good idea. Maybe we can address this when adding handling for data:// urls?
WebKit Commit Bot
Comment 6
2010-09-23 12:55:24 PDT
Comment on
attachment 68558
[details]
Patch Clearing flags on attachment: 68558 Committed
r68184
: <
http://trac.webkit.org/changeset/68184
>
WebKit Commit Bot
Comment 7
2010-09-23 12:55:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug