2010-09-23  Patrick Gansterer  <paroga@webkit.org>

Reviewed by Adam Roben.

        Fix ResourceHandleWin::cancel() for network resources
        https://bugs.webkit.org/show_bug.cgi?id=46383

        * platform/network/win/ResourceHandleWin.cpp:
        (WebCore::ResourceHandle::onRequestComplete): Check it requestHandle is not 0.
        (WebCore::ResourceHandle::cancel): Set requestHandle to 0.

Canonical link: https://commits.webkit.org/58883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68184 268f45cc-cd09-0410-ab3c-d52691b4dbfc